--- a/Curso_Frontend/Web_Pages_Origamid/teste_aulas.html
+++ b/Curso_Frontend/Web_Pages_Origamid/teste_aulas.html
@@ -1,3 +1,10 @@
+<meta property="og:image" content="https://example.com/thumbnail.jpg" />
+
+<base href="https://www.example.com/" />
+<base target="_blank" />
+<base target="_top" href="https://example.com/" />
+
+
 <div class="container">
 
   <h2>Elementos <strong>Block</strong></h2>
