add conteudos tags semanticos

--- a/Curso_Frontend/Web_Pages_Origamid/grid.html
+++ b/Curso_Frontend/Web_Pages_Origamid/grid.html
@@ -11,10 +11,12 @@
 <body>
   <div class="grid_column">
     <h1 class="titulo">Nimbus Stark</h1>
-    <spam class="preco">R$ 4899,00</spam>
     <img class="foto" src="./img/bicicleta.jpg" alt="Bicicleta Preta">
-    <p class="descricao">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-    <a class="comprar" href="/">Comprar</a>
+    <div class="info">
+      <spam class="preco">R$ 4899,00</spam>
+      <p class="descricao">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+      <a class="comprar" href="/">Comprar</a>
+    </div>
   </div>
 
 </body>
